--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,17 @@ body {
     background-color: var(--bcg-color);
     font-family: 'Roboto', sans-serif, 'Raleway';
 }
+section {
+    width: 1600px;
+    margin: 0 auto;
+}
+h1, h2, h3, p {
+    margin: 0;
+}
+ul {
+    padding: 0;
+}
+
 .item {
     list-style: none;
 }
@@ -24,6 +35,7 @@ body {
     line-height: 1.19;
     text-align: left;
     letter-spacing: var(--let-spc);
+    width: 145px;
 }
 .logo-nav-word {
     color: #000000;
@@ -66,16 +78,26 @@ body {
 
 /*Секція Герой*/
 .hero {
+    outline: 2px solid tomato;
+
     background-color: #2F303A;
     color: var(--bcg-color);
+    text-align: center;
+    padding: 200px 452px;
+
 }
+
 .title-hero {
+    outline: 2px solid tomato;
+
     font-weight: 900;
     font-size: 44px;
     line-height: 1.36;
-    text-align: center;
     letter-spacing: 0.06em;
+    width: 696px;
+    margin-bottom: 30px;
 }
+
 .btn-hero {
     color: var(--bcg-color);
     background-color: var(--accent-color);
@@ -84,41 +106,97 @@ body {
     font-weight: 700;
     font-size: 16px;
     line-height: 1.88;
-    text-align: center;
     letter-spacing: 0.06em;
-    margin: 0 auto;
-    display: block;
+    min-width: 200px;
+    padding: 10px 32px;
+    border-radius: 4px;
+    border: 1px solid #000000;
 }
 
 /* Секція Переваги */
+.benefits {
+    outline: 2px solid red;
+
+    padding: 94px 215px;
+}
 .section-title {
     visibility: hidden;
 }
 .title-benefits {
+    outline: 2px solid red;
+
     color: var(--title-color);
     font-size: 14px;
     line-height: 1.14;
     text-align: left;
     letter-spacing: var(--let-spc);
+    width: 270px;
+    margin-bottom: 10px;
 }
 .text-benefits{
+    outline: 2px solid red;
+
     font-size: 14px;
     line-height: 1.71;
     text-align: left;
     letter-spacing: var(--let-spc);
+    width: 270px;
 }
 
 /* Секція робіт і секція команда */
-.team {
-    background-color: #F5F4FA;
+
+.work {
+    outline: 2px solid red;
+    padding-top: 0;
+    padding-right: 215px;
+    padding-bottom: 94px;
+    padding-left: 215px;
 }
-.title {
+
+.team {
+    outline: 2px solid red;
+
+    background-color: #F5F4FA;
+    padding: 94px 215px;
+}
+
+.title-work,
+.title-our-team {
     color: var(--title-color);
     font-size: 36px;
+    font-weight: 700;
     line-height: 1.17;
     text-align: center;
     letter-spacing: var(--let-spc);
+    margin: 0 auto;
+    margin-bottom: 50px;
 }
+
+.title-work {
+    outline: 2px solid red;
+
+    min-width: 376px;
+
+}
+
+.title-our-team {
+    outline: 2px solid red;
+
+    min-width: 264px;
+
+}
+.our-team {
+    outline: 2px solid red;
+
+    padding-bottom: 30px;
+    border: 1px;
+    border-bottom-right-radius: 4px;
+    border-bottom-left-radius: 4px;
+}
+.photo-team {
+    margin-bottom: 30px;
+}
+
 .team-title {
     color: var(--title-color);
     font-weight: 500;
@@ -126,6 +204,8 @@ body {
     line-height: 1.18;
     text-align: center;
     letter-spacing: var(--let-spc);
+    margin: 0 auto;
+    margin-bottom: 10px;
 }
 .position {
     font-size: 16px;
@@ -189,15 +269,15 @@ footer {
 .link {
     text-decoration: none;
 }
-.title-work {
+.title-project {
     color: var(--title-color);
     font-size: 18px;
     line-height: 2;
     text-align: left;
     letter-spacing: 0.06em;
 }
-.title-work:hover,
-.title-work:focus {
+.title-project:hover,
+.title-project:focus {
     color: var(--accent-color);
 }
 .work-card {
