--- a/css/styles.css
+++ b/css/styles.css
@@ -11,8 +11,11 @@ body {
     background-color: var(--bcg-color);
     font-family: 'Roboto', sans-serif, 'Raleway';
 }
-section {
+section,
+footer {
     width: 1600px;
+    padding-left: 215px;
+    padding-right: 215px;
     margin: 0 auto;
 }
 h1, h2, h3, p {
@@ -20,13 +23,41 @@ h1, h2, h3, p {
 }
 ul {
     padding: 0;
+    margin: 0;
 }
 
 .item {
     list-style: none;
 }
-/* Логотип*/
+.container{
+    width: 1200px;
+}
+
+/* Хедер */
+.header-page {
+    width: 1600px;
+    padding-left: 215px;
+    padding-right: 215px;
+    margin: 0 auto;
+}
+
+.container-menu {
+    display: flex;
+    align-items: center;
+}
+
+.navigation {
+    display: flex;
+    align-items: center;
+}
+
 .logo {
+    display: block;
+    padding-top: 24px;
+    padding-bottom: 25px;
+    margin-right: 93px;
+    width: 145px;
+
     text-decoration: none;
     color: var(--accent-color);
     font-family: 'Raleway';
@@ -35,21 +66,36 @@ ul {
     line-height: 1.19;
     text-align: left;
     letter-spacing: var(--let-spc);
-    width: 145px;
 }
+
 .logo-nav-word {
     color: #000000;
 }
+
+
 .logo-word {
     color: var(--bcg-color);
 }
+
 .logo:hover, 
 .logo:focus {
     text-decoration: underline;
 }
 
-/* Хедер*/
-.link-navigation {
+.menu-nav{
+    display: flex;
+    align-items: center;
+}
+
+.menu-nav > .item-nav:not(:first-child) {
+    margin-left: 50px;
+}
+
+.menu-nav .link-navigation {
+    display: block;
+    padding-top: 32px;
+    padding-bottom: 32px;
+
     text-decoration: none;
     color: var(--title-color);
     font-weight: 500;
@@ -58,11 +104,31 @@ ul {
     text-align: left;
     letter-spacing: 0.02em;
 }
+
+.menu-nav .current {
+    color: var(--accent-color);
+}
+
 .link-navigation:hover,
 .link-navigation:focus {
     color: var(--accent-color);
 }    
+
+.menu-contact {
+    display: flex;
+    align-items: center;
+    margin-left: auto;
+}
+
+.item-contact:not(:last-child) {
+    margin-right: 50px;
+}
+
 .link-contacts {
+    display: block;
+    padding-top: 32px;
+    padding-bottom: 32px;
+    
     color: var(--main-text-color);
     text-decoration: none;
     font-weight: 500;
@@ -71,6 +137,7 @@ ul {
     text-align: left;
     letter-spacing: 0.02em;
 }
+
 .link-contacts:hover,
 .link-contacts:focus {
     color: var(--accent-color);
@@ -80,25 +147,32 @@ ul {
 .hero {
     outline: 2px solid tomato;
 
-    background-color: #2F303A;
-    color: var(--bcg-color);
     text-align: center;
     padding: 200px 452px;
 
+    background-color: #2F303A;
+    color: var(--bcg-color);
 }
 
 .title-hero {
     outline: 2px solid tomato;
 
+    width: 696px;
+    margin-bottom: 30px;
+
     font-weight: 900;
     font-size: 44px;
     line-height: 1.36;
     letter-spacing: 0.06em;
-    width: 696px;
-    margin-bottom: 30px;
+
 }
 
 .btn-hero {
+    min-width: 200px;
+    padding: 10px 32px;
+    border-radius: 4px;
+    border: 1px solid #000000;
+
     color: var(--bcg-color);
     background-color: var(--accent-color);
     font-family: inherit;
@@ -107,10 +181,6 @@ ul {
     font-size: 16px;
     line-height: 1.88;
     letter-spacing: 0.06em;
-    min-width: 200px;
-    padding: 10px 32px;
-    border-radius: 4px;
-    border: 1px solid #000000;
 }
 
 /* Секція Переваги */
@@ -119,40 +189,88 @@ ul {
 
     padding: 94px 215px;
 }
+
 .section-title {
     visibility: hidden;
 }
+
+.list-benefits {
+    display: flex;
+    align-items: center;
+}
+
+.item-benefits {
+    margin-right: 30px;
+}
+
+.item-benefits:last-child {
+    margin-right: 0;
+}
+
 .title-benefits {
-    outline: 2px solid red;
+    margin-bottom: 10px;
 
     color: var(--title-color);
     font-size: 14px;
     line-height: 1.14;
     text-align: left;
     letter-spacing: var(--let-spc);
-    width: 270px;
-    margin-bottom: 10px;
 }
-.text-benefits{
-    outline: 2px solid red;
 
+.text-benefits{
     font-size: 14px;
     line-height: 1.71;
     text-align: left;
     letter-spacing: var(--let-spc);
-    width: 270px;
 }
 
-/* Секція робіт і секція команда */
+/* Секція фото-робіт */
 
 .work {
     outline: 2px solid red;
+
     padding-top: 0;
     padding-right: 215px;
     padding-bottom: 94px;
     padding-left: 215px;
 }
 
+.title-work {
+    outline: 2px solid red;
+
+    min-width: 376px;
+}
+
+.list-work {
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+.item-work {
+    margin-right: 30px;
+}
+
+.item-work:last-child {
+    margin-right: 0;
+}
+/* .photo {
+    display: block;
+} */
+.title-work,
+.title-our-team {
+    margin: 0 auto;
+    margin-bottom: 50px;
+
+    color: var(--title-color);
+    font-size: 36px;
+    font-weight: 700;
+    line-height: 1.17;
+    text-align: center;
+    letter-spacing: var(--let-spc);
+}
+
+/* Секція команда */
 .team {
     outline: 2px solid red;
 
@@ -160,31 +278,26 @@ ul {
     padding: 94px 215px;
 }
 
-.title-work,
-.title-our-team {
-    color: var(--title-color);
-    font-size: 36px;
-    font-weight: 700;
-    line-height: 1.17;
-    text-align: center;
-    letter-spacing: var(--let-spc);
-    margin: 0 auto;
-    margin-bottom: 50px;
-}
-
-.title-work {
-    outline: 2px solid red;
-
-    min-width: 376px;
-
-}
-
 .title-our-team {
     outline: 2px solid red;
 
     min-width: 264px;
-
 }
+
+.list-team {
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+.item-team {
+    margin-right: 30px;
+}
+
+.item-team:last-child {
+    margin-right: 0;
+}
+
 .our-team {
     outline: 2px solid red;
 
@@ -192,35 +305,50 @@ ul {
     border: 1px;
     border-bottom-right-radius: 4px;
     border-bottom-left-radius: 4px;
+
+    background-color: var(--bcg-color);
 }
+
 .photo-team {
     margin-bottom: 30px;
 }
 
 .team-title {
+    margin: 0 auto;
+    margin-bottom: 10px;
+
     color: var(--title-color);
     font-weight: 500;
     font-size: 16px;
     line-height: 1.18;
     text-align: center;
     letter-spacing: var(--let-spc);
-    margin: 0 auto;
-    margin-bottom: 10px;
 }
+
 .position {
     font-size: 16px;
     line-height: 1.19;
     text-align: center;
     letter-spacing: var(--let-spc);
 }
-.our-team {
-    background-color: var(--bcg-color);
-}
+
 /* Футер */
-footer {
+.ftr-page {
+    padding-top: 60px;
+    padding-bottom: 60px;
+
     background-color: #2F303A;
 }
+
+.ftr-logo {
+    padding: 0;
+    margin-right: 0;
+    margin-bottom: 20px;
+}
+
 .location {
+    margin-bottom: 9px;
+
     color: var(--bcg-color);
     font-style: normal;
     font-size: 14px;
@@ -229,6 +357,11 @@ footer {
     letter-spacing: var(--let-spc);
 }
 .footer-address > .link-contacts {
+    width: 231px;
+    padding: 0;
+    margin-bottom: 9px;
+    margin-right: auto;
+
     color: rgba(255, 255, 255, 0.6);
     font-weight: 400;
     font-size: 14px;
@@ -236,11 +369,14 @@ footer {
     text-align: left;
     letter-spacing: var(--let-spc);
 }
+
+.footer-address > .link-contacts:last-child {
+    margin-bottom: 0;
+}
+
 /* СТОРІНКА ПОРТФОЛІО 
 Фільтр Галереї - кнопки*/
-.current {
-    color: var(--accent-color);
-}
+
 
 .btn-filter {
     color: var(--title-color);
