--- a/css/styles.css
+++ b/css/styles.css
@@ -39,6 +39,7 @@ ul {
     padding-left: 215px;
     padding-right: 215px;
     margin: 0 auto;
+    border-bottom: 1px solid #ECECEC;
 }
 
 .container-menu {
@@ -145,8 +146,6 @@ ul {
 
 /*Секція Герой*/
 .hero {
-    outline: 2px solid tomato;
-
     text-align: center;
     padding: 200px 452px;
 
@@ -155,8 +154,6 @@ ul {
 }
 
 .title-hero {
-    outline: 2px solid tomato;
-
     width: 696px;
     margin-bottom: 30px;
 
@@ -185,8 +182,6 @@ ul {
 
 /* Секція Переваги */
 .benefits {
-    outline: 2px solid red;
-
     padding: 94px 215px;
 }
 
@@ -227,8 +222,6 @@ ul {
 /* Секція фото-робіт */
 
 .work {
-    outline: 2px solid red;
-
     padding-top: 0;
     padding-right: 215px;
     padding-bottom: 94px;
@@ -236,8 +229,6 @@ ul {
 }
 
 .title-work {
-    outline: 2px solid red;
-
     min-width: 376px;
 }
 
@@ -254,9 +245,7 @@ ul {
 .item-work:last-child {
     margin-right: 0;
 }
-/* .photo {
-    display: block;
-} */
+
 .title-work,
 .title-our-team {
     margin: 0 auto;
@@ -272,15 +261,11 @@ ul {
 
 /* Секція команда */
 .team {
-    outline: 2px solid red;
-
     background-color: #F5F4FA;
     padding: 94px 215px;
 }
 
 .title-our-team {
-    outline: 2px solid red;
-
     min-width: 264px;
 }
 
@@ -299,8 +284,6 @@ ul {
 }
 
 .our-team {
-    outline: 2px solid red;
-
     padding-bottom: 30px;
     border: 1px;
     border-bottom-right-radius: 4px;
@@ -377,8 +360,26 @@ ul {
 /* СТОРІНКА ПОРТФОЛІО 
 Фільтр Галереї - кнопки*/
 
+.gallery {
+    padding-top: 94px;
+    padding-bottom: 94px;
+}
+
+.list-filter {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.item-filter:not(:last-child) {
+    margin-right: 8px;
+}
 
 .btn-filter {
+    padding: 6px 22px;
+    border: transparent;
+    border-radius: 4px;
+
     color: var(--title-color);
     background-color: #F5F4FA;
     cursor: pointer;
@@ -389,23 +390,53 @@ ul {
     text-align: center;
     letter-spacing: var(--let-spc);
 }
+
 .btn-filter:hover,
 .btn-filter:focus {
     color: var(--bcg-color);
     background-color: var(--accent-color);
 }
+
 .btn-active {
     color: var(--bcg-color);
     background-color: var(--accent-color);
 }
+
 /* Карточки робіт Портфоліо */
+
 .title-portfolio {
     visibility: hidden;
 }
+
+.list-portfolio {
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+}
+.item-portfolio {
+    margin-right: 30px;
+    margin-bottom: 30px;
+    border: 1px solid #EEEEEE;
+}
+
+.item-portfolio:nth-child(3n) {
+    margin-right: 0;
+}
+
+.item-portfolio:nth-last-child(-n + 3) {
+    margin-bottom: 0;
+}
+
 .link {
     text-decoration: none;
 }
+
 .title-project {
+    margin-top: 20px;
+    margin-right: 24px;
+    margin-bottom: 4px;
+    margin-left: 24px;
+
     color: var(--title-color);
     font-size: 18px;
     line-height: 2;
@@ -417,6 +448,10 @@ ul {
     color: var(--accent-color);
 }
 .work-card {
+    margin-right: 24px;
+    margin-left: 24px;
+    margin-bottom: 20px;
+
     color: var(--main-text-color);
     font-size: 16px;
     line-height: 1.88;
