--- a/css/styles.css
+++ b/css/styles.css
@@ -11,13 +11,7 @@ body {
     background-color: var(--bcg-color);
     font-family: 'Roboto', sans-serif, 'Raleway';
 }
-section,
-footer {
-    width: 1600px;
-    padding-left: 215px;
-    padding-right: 215px;
-    margin: 0 auto;
-}
+
 h1, h2, h3, p {
     margin: 0;
 }
@@ -31,14 +25,11 @@ ul {
 }
 .container{
     width: 1200px;
+    margin: 0 auto;
 }
 
 /* Хедер */
 .header-page {
-    width: 1600px;
-    padding-left: 215px;
-    padding-right: 215px;
-    margin: 0 auto;
     border-bottom: 1px solid #ECECEC;
 }
 
@@ -72,7 +63,6 @@ ul {
 .logo-nav-word {
     color: #000000;
 }
-
 
 .logo-word {
     color: var(--bcg-color);
@@ -147,7 +137,7 @@ ul {
 /*Секція Герой*/
 .hero {
     text-align: center;
-    padding: 200px 452px;
+    padding: 200px 0;
 
     background-color: #2F303A;
     color: var(--bcg-color);
@@ -156,6 +146,8 @@ ul {
 .title-hero {
     width: 696px;
     margin-bottom: 30px;
+    margin-left: auto;
+    margin-right: auto;
 
     font-weight: 900;
     font-size: 44px;
@@ -182,7 +174,7 @@ ul {
 
 /* Секція Переваги */
 .benefits {
-    padding: 94px 215px;
+    padding: 94px 0;
 }
 
 .section-title {
@@ -223,9 +215,7 @@ ul {
 
 .work {
     padding-top: 0;
-    padding-right: 215px;
     padding-bottom: 94px;
-    padding-left: 215px;
 }
 
 .title-work {
@@ -262,7 +252,7 @@ ul {
 /* Секція команда */
 .team {
     background-color: #F5F4FA;
-    padding: 94px 215px;
+    padding: 94px 0;
 }
 
 .title-our-team {
@@ -369,6 +359,7 @@ ul {
     display: flex;
     align-items: center;
     justify-content: center;
+    margin-bottom: 50px;
 }
 
 .item-filter:not(:last-child) {
