--- a/css/styles.css
+++ b/css/styles.css
@@ -33,6 +33,8 @@ img {
 .container{
     width: 1200px;
     margin: 0 auto;
+    padding-left: 15px;
+    padding-right: 15px;
 }
 
 /* Хедер */
@@ -187,10 +189,11 @@ img {
 .list-benefits {
     display: flex;
     align-items: center;
+    margin-right: -30px;
 }
 
 .item-benefits {
-    width: calc((100%-3*30)/4);
+    width: calc((100% - 4 * 30px) / 4);
     margin-right: 30px;
 }
 
@@ -418,6 +421,7 @@ img {
     flex-wrap: wrap;
 }
 .item-portfolio {
+    width: calc((100% - 2 * 30px) / 3);
     margin-right: 30px;
     margin-bottom: 30px;
     border: 1px solid #EEEEEE;
